test/resources/nameAnalyzer/failing/UndefinedConstructor1.amy
object Constructor
  abstract class Foo
  def foo(): Foo := Bar(42) end foo
end Constructor
